--- a/SpringWeb/Mobilele/src/main/resources/templates/fragments/navbar.html
+++ b/SpringWeb/Mobilele/src/main/resources/templates/fragments/navbar.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+    xmlns:th="www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Navbar</title>
@@ -19,8 +20,8 @@
                 >
                     <a class="nav-link" href="/brands/all">All Brands</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/offers/add">Add Offer</a>
+                <li class="nav-item" th:if="${@currentUser.isLogged()}">
+                    <a class="nav-link" href="/offers/add" >Add Offer</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/offers/all">All Offers</a>
@@ -37,19 +38,20 @@
                         <a class="dropdown-item" href="/">Something else here</a>
                     </div>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" th:if="${@currentUser.isLogged()}">
                     <div class="form-inline my-2 my-lg-0 border px-3">
                         <div class="logged-user"
-                             text="Welcome, Gosho"></div>
-                        <a class="nav-link" href="/users/logout">Logout</a>
+                             text="Welcome, Gosho">
+                        </div>
+                        <a class="nav-link" th:href="@{/users/logout}">Logout</a>
                     </div>
                 </li>
 
-                <li class="nav-item">
-                    <a class="nav-link" href="/users/register">Register</a>
+                <li class="nav-item" th:if="${!@currentUser.isLogged()}">
+                    <a class="nav-link" th:href="@{/users/register}">Register</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/users/login">Login</a>
+                <li class="nav-item" th:if="${!@currentUser.isLogged()}">
+                    <a class="nav-link" th:href="@{/users/login}">Login</a>
                 </li>
 
             </ul>
