--- a/SpringWeb/pathfinder/src/main/resources/templates/login.html
+++ b/SpringWeb/pathfinder/src/main/resources/templates/login.html
@@ -12,16 +12,16 @@
 
         <div class="row g-3 align-items-center">
 
-            <form
-                    action="/"
-                    method="">
+            <form   th:object="${userLoginDto}"
+                    th:action="@{/login}"
+                    th:method="post">
                 <div>
                     <div class="col-auto">
                         <label for="inputUsername" class="col-form-label ">Username</label>
                     </div>
                     <div class="col-auto">
                         <input type="text"
-                               name="username"
+                               th:field="*{username}"
                                required minlength="4" maxlength="20"
                                id="inputUsername"
                                class="form-control"
@@ -34,7 +34,7 @@
                     </div>
                     <div class="col-auto">
                         <input type="password"
-                               name="password"
+                               th:field="*{password}"
                                required minlength="4" maxlength="20"
                                id="inputPassword" class="form-control"
                                aria-describedby="passwordHelpInline">
