--- a/SpringWeb/pathfinder/src/main/resources/templates/profile.html
+++ b/SpringWeb/pathfinder/src/main/resources/templates/profile.html
@@ -6,50 +6,21 @@
     <th:block th:include="/fragments/head"></th:block>
 </head>
 <body>
-<header>
-    <nav class="main-nav">
-        <ul>
-                <li>
-                    <a href="/">Home</a>
-                </li>
-                <li>
-                    <a href="/">Login</a>
-                </li>
-                <li>
-                    <a href="/">Register</a>
-                </li>
-                <li>
-                    <a href="/">About</a>
-                </li>
-				<li>
-                    <a href="/">Add new route</a>
-                </li>
-                <li>
-                    <a href="/">Profile</a>
-                </li>
-                <li>
-                    <a href="/">Admin</a>
-                </li>
-                <li>
-                    <a href="/">Logout</a>
-                </li>
-        </ul>
-    </nav>
-</header>
+<th:block th:include="/fragments/nav"></th:block>
 <main class="p-5 align-content-center bg-blur my-register-div">
     <div class="container mt-5">
         <div class="row d-flex justify-content-center">
             <div class="col-md-7">
                 <div class="profile-card p-3 py-4">
                     <div class="text-center"><img src="/images/profile.jpg" width="100" class="rounded-circle"></div>
-                    <div class="text-center mt-3">
-                        <span class="bg-secondary p-1 px-4 rounded text-white">Pro</span>
+                    <div class="text-center mt-3" th:object="${@currentUser.getUser()}">
+                        <span class="bg-secondary p-1 px-4 rounded text-white" th:text="*{level}">Pro</span>
                         <h5 class="mt-4 mb-0">Full name</h5>
-                        <span>UI/UX Designer</span>
+                        <span th:text="*{fullName}">Full Name</span>
                         <h5 class="mt-2 mb-0">Username</h5>
-                        <span>UI/UX Designer</span>
+                        <span th:text="*{username}">UI/UX Designer</span>
                         <h5 class="mt-2 mb-0">Age</h5>
-                        <span>33</span>
+                        <span th:text="*{age}">33</span>
                         <div class="px-4 mt-5">
                             <p class="fonts">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim et nostrum
                                 optio perferendis quam quod ratione rem sit soluta ut! A dolor laborum, maiores neque
