--- a/SpringWeb/Mobilele/src/main/resources/templates/auth-login.html
+++ b/SpringWeb/Mobilele/src/main/resources/templates/auth-login.html
@@ -16,25 +16,27 @@
 
 <div class="container">
     <h2 class="text-center text-white">Login</h2>
-    <form method="POST"
+    <form   th:action="@{/users/login}"
+            th:method="post"
+            th:object="${userLoginDto}"
           class="main-form mx-auto col-md-8 d-flex flex-column justify-content-center">
         <div class="form-group">
             <label for="username" class="text-white font-weight-bold">Username</label>
-            <input value="username" id="username" name="username" type="text" min="2" max="50"
+            <input value="username" id="username" th:field="*{username}" type="text" min="2" max="50"
                    class="form-control"
                    placeholder="Username"/>
         </div>
         <div class="form-group">
             <label for="password" class="text-white font-weight-bold">Password</label>
-            <input  value="password" id="password" name="password" type="password" min="2"
+            <input  value="password" id="password" th:field="*{password}" type="password" min="2"
+                    th:errorclass="invalid"
                    max="20" class="form-control"
                    placeholder="Password"/>
-
         </div>
-
-        <p class="errors alert alert-danger">
-            Invalid username or password.
+        <p class="errors alert alert-danger" th:if="${#fields.hasErrors()}">
+            No such user.
         </p>
+
 
         <div class="row">
             <div class="col col-md-4">
