--- a/SpringWeb/Mobilele/src/main/resources/templates/offer-add.html
+++ b/SpringWeb/Mobilele/src/main/resources/templates/offer-add.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
@@ -13,71 +14,26 @@
 
 <body>
 
-<div>
-     <nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top">
-        <a class="navbar-brand" href="/"><img alt="car picture" src="/img/car.png" class="logo"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto col-12 justify-content-between">
-                <li class="nav-item"
-                    >
-                    <a class="nav-link" href="/brands/all">All Brands</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/offers/add">Add Offer</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/offers/all">All Offers</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="/" id="navbarDropdown" role="button"
-                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Admin
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="/">Action</a>
-                        <a class="dropdown-item" href="/">Another action</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="/">Something else here</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <div class="form-inline my-2 my-lg-0 border px-3">
-                        <div class="logged-user"
-                             text="Welcome, Gosho"></div>
-                        <a class="nav-link" href="/users/logout">Logout</a>
-                    </div>
-                </li>
-                
-                    <li class="nav-item">
-                        <a class="nav-link" href="/users/register">Register</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/users/login">Login</a>
-                    </li>
-                
-            </ul>
-        </div>
-    </nav>
-</div>
+<div th:replace="fragments/navbar"></div>
 
 
 <div class="container">
     <h2 class="text-center text-white">Upload Offer</h2>
-    <form method="POST" 
+    <form th:method="post"
+          th:action="@{/offers/add}"
+          th:object="${addOfferDto}"
           class="main-form mx-auto col-md-8 d-flex flex-column justify-content-center">
         <div class="row">
 
             <div class="form-group col-md-6 mb-3">
                 <label class="text-center text-white font-weight-bold" for="model">Model</label>
-                <select id="model" class="form-control">
+                <select id="model" class="form-control" th:field="*{model}">
                     <option value="">- Select a model -</option>
-                    <optgroup label="Brand name">
-                        <option>Model</option>
+                    <optgroup th:each="brand : ${brandList}" th:label="${brand.name}" >
+                        <option th:each="model : ${brand.models}"
+                                th:text="${model.name}"
+                                th:value="${model.name}"
+                                th:selected="*{model} == ${model}">Model</option>
                     </optgroup>
                 </select>
                 <p class="errors alert alert-danger">
@@ -88,7 +44,7 @@
                 <label for="price" class="text-white font-weight-bold">Price</label>
                 <input id="price" type="number" min="0" step="100" class="form-control"
                        placeholder="Suggested price"/>
-                <p  class="errors alert alert-danger">
+                <p class="errors alert alert-danger">
                     Suggested price is required.
                 </p>
             </div>
@@ -96,24 +52,34 @@
         <div class="row">
             <div class="form-group col-md-6 mb-3">
                 <label class="text-center text-white font-weight-bold" for="engine">Engine</label>
-                <select id="engine" class="form-control">
+                <select id="engine" class="form-control" th:field="*{engine}" th:errorclass="is-invalid">
                     <option value="">- Select engine type -</option>
-                    <option>
+                    <option th:each="engine : ${T(bg.softuni.mobilele.models.enums.Engine).values()}"
+                            th:value="${engine}"
+                            th:text="${engine}"
+                            th:selected="${engine} == *{engine}"
+                    >
                         Engine type
                     </option>
                 </select>
-                <p class="errors alert alert-danger">
+                <p class="invalid-feedback errors alert alert-danger">
                     Engine type is required.
                 </p>
             </div>
             <div class="form-group col-md-6 mb-3">
                 <label class="text-center text-white font-weight-bold" for="transmission">Transmission</label>
-                <select id="transmission" class="form-control">
+                <select id="transmission" class="form-control" th:field="*{transmission}" th:errorclass="${is-invalid}">
                     <option value="">- Select transmission type -</option>
-                    <option> Transmission type
+                    <option th:each="transmission : ${T(bg.softuni.mobilele.models.enums.Transmission).values()}"
+                            th:value="${transmission}"
+                            th:text="${transmission}"
+                            th:selected="${transmission} == *{transmission}"
+                    >
+                        Transmission type
                     </option>
+
                 </select>
-                <p class="errors alert alert-danger">
+                <p class="invalid-feedback errors alert alert-danger">
                     Transmission type is required.
                 </p>
             </div>
@@ -140,7 +106,7 @@
 
         <div class="form-group">
             <label class="text-white font-weight-bold" for="description">Description</label>
-            <textarea id="description" type="textarea" class="form-control" rows="3"
+            <textarea id="description" th:field="*{description}" th:text="*{description}" type="textarea" class="form-control" rows="3"
                       placeholder="Description"></textarea>
             <p class="errors alert alert-danger">
                 Description is required.
@@ -166,7 +132,7 @@
 </div>
 
 <div>
-    <footer> </footer>
+    <footer></footer>
 </div>
 
 </body>
