--- a/SpringWeb/linkedout/src/main/resources/templates/employee-add.html
+++ b/SpringWeb/linkedout/src/main/resources/templates/employee-add.html
@@ -9,21 +9,8 @@
 </head>
 <body>
 
-<header>
-    <nav class="navbar navbar-expand-lg navbar-toggler bg-dark">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-item nav-link text-white" href="/companies/add">Add Company</a>
-                <a class="nav-item nav-link text-white" href="/employees/add">Add Employee</a>
-                <a class="nav-item nav-link text-white" href="/companies/all">All Companies</a>
-                <a class="nav-item nav-link text-white" href="/employees/all">All Employees</a>
-            </div>
-        </div>
-    </nav>
+<header th:include="/fragments/nav">
+
 </header>
 <div class="container">
     <div class="row">
@@ -32,69 +19,61 @@
             <div class="justify-content-center">
                 <h1>Add Employee</h1>
             </div>
-            <form class="m-md-auto w-50 text-center">
+            <form class="m-md-auto w-50 text-center" th:method="post" th:action="@{/employees/add}" th:object="${addEmployeeDto}">
 
                 <div class="form-group">
                     <label for="firstName">First Name</label>
-                    <input type="text" class="form-control text-center" id="firstName" aria-describedby="firstName" name="firstName" />
-                    <small>Error message</small>
+                    <input type="text" class="form-control text-center" id="firstName" aria-describedby="firstName"
+                           th:field="*{firstName}"
+                           th:errorclass="is-invalid"
+                    />
+                    <small class="invalid-feedback">Error message</small>
                 </div>
 
                 <div class="form-group">
                     <label for="lastName">Last Name</label>
-                    <input type="text" class="form-control text-center" id="lastName" aria-describedby="lastName" name="lastName"/>
-                    <small>Error message</small>
+                    <input type="text" class="form-control text-center" id="lastName" aria-describedby="lastName"
+                           th:field="*{lastName}"
+                           th:errorclass="is-invalid"
+                    />
+                    <small class="invalid-feedback">Error message</small>
                 </div>
-                <fieldset class="form-group">
+                <fieldset class="form-group" th:field="*{educationLevel}">
                     <legend>Choose Education Level</legend>
-                    <div class="form-check">
+                    <div class="form-check" th:each="level : ${T(bg.softuni.linkedout.models.enums.EducationLevel).values()}">
                         <label class="form-check-label">
-                            <input type="radio" class="form-check-input" name="educationLevel"/>
-                            <span>Master</span>
+                            <input type="radio" class="form-check-input" name="educationLevel" th:value="${level}" th:errorclass="is-invalid"/>
+                            <span th:text="${#strings.capitalize(#strings.toLowerCase(level))}">Level</span>
                         </label>
                     </div>
-                    <div class="form-check disabled">
-                        <label class="form-check-label">
-                            <input type="radio" class="form-check-input" name="educationLevel"/>
-                            <span>Bachelor</span>
-                        </label>
-                    </div>
-                    <div class="form-check disabled">
-                        <label class="form-check-label">
-                            <input type="radio" class="form-check-input " name="educationLevel" />
-                            <span>Secondary</span>
-                        </label>
-                    </div>
-                    <small>Error message</small>
+                    <small class="invalid-feedback">Error message</small>
 					</fieldset>
 
                 <div class="form-group">
                     <label for="company"><h5>All available companies</h5></label>
-                    <select multiple="false" class="form-control text-center" id="company" name="company">
-                        <option> First Company name</option>
-                        <option> Second Company name</option>
-                        <option> Third Company name</option>
+                    <select multiple="false" class="form-control text-center" id="company" th:field="*{company}" th:errorclass="is-invalid">
+                        <option th:each="company : ${companies}" th:text="${company.name}" th:value="${company.name}">Company name</option>
                     </select>
-                    <small>Error message</small>
+                    <small class="invalid-feedback">Error message</small>
 				</div>
 
                 <div class="form-group">
                     <label for="jobTitle">Job Title</label>
-                    <input type="text" class="form-control text-center" id="jobTitle" aria-describedby="jobTitle" name="jobTitle" />
-                    <small>Error message</small>
+                    <input type="text" class="form-control text-center" id="jobTitle" aria-describedby="jobTitle" th:field="*{jobTitle}" th:errorclass="is-invalid"/>
+                    <small class="invalid-feedback">Error message</small>
                 </div>
 
                 <div class="form-group">
                     <label for="birthDate">Birth Date</label>
-                    <input type="date" class="form-control text-center" id="birthDate" aria-describedby="birthDate" name="birthDate" />
-                    <small>Error message</small>
+                    <input type="date" class="form-control text-center" id="birthDate" aria-describedby="birthDate" th:field="*{birthDate}" th:errorclass="is-invalid" />
+                    <small class="invalid-feedback">Error message</small>
                 </div>
 
                 <div class="form-group">
                     <label for="salary">Salary</label>
                     <input type="number" min="0" class="form-control text-center" id="salary" 
-					aria-describedby="salary" name="salary"/>
-                    <small>Error message</small>
+					aria-describedby="salary" th:field="*{salary}" th:errorclass="is-invalid"/>
+                    <small class="invalid-feedback">Error message</small>
                 </div>
 
                 <button type="submit" class="btn btn-secondary">Add Employee</button>
