show all and details

--- a/SpringWeb/linkedout/src/main/resources/templates/company-details.html
+++ b/SpringWeb/linkedout/src/main/resources/templates/company-details.html
@@ -9,21 +9,8 @@
 </head>
 <body>
 
-<header>
-    <nav class="navbar navbar-expand-lg navbar-toggler bg-dark">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-item nav-link text-white" href="/companies/add">Add Company</a>
-                <a class="nav-item nav-link text-white" href="/employees/add">Add Employee</a>
-                <a class="nav-item nav-link text-white" href="/companies/all">All Companies</a>
-                <a class="nav-item nav-link text-white" href="/employees/all">All Employees</a>
-            </div>
-        </div>
-    </nav>
+<header th:include="/fragments/nav">
+
 </header>
 <main>
     <div class="container">
@@ -35,14 +22,14 @@
                 </div>
                 <div class="row">
                     <div class="col-md-6 bg-dark"><img src="/pic/company.png" height="350px"></div>
-                    <div class="col-md-6 bg-dark">
+                    <div class="col-md-6 bg-dark" th:object="${company}">
                         <h2>Company</h2>
-                        <h4>Name: {name}</h4>
-                        <h4>Town: {town}</h4>
-                        <h4>Description: {description}</h4>
-                        <h4>Budget: {budget}</h4>
+                        <h4>Name: <sp th:text="*{name}"></sp></h4>
+                        <h4>Town: <sp th:text="*{town}"></sp></h4>
+                        <h4>Description: <sp th:text="*{description}"></sp></h4>
+                        <h4>Budget: <sp th:text="*{budget}"></sp></h4>
                         <div class="align-bottom"><a class="btn btn-danger align-bottom"
-                                                     href="/">Delete company</a>
+                                                     th:href="@{'/companies/'+*{id}+'/delete'}">Delete company</a>
                         </div>
                     </div>
                 </div>
