--- a/SpringWeb/linkedout/src/main/resources/templates/employee-all.html
+++ b/SpringWeb/linkedout/src/main/resources/templates/employee-all.html
@@ -18,24 +18,25 @@
         <hr style="width: 50%"/>
         <div class='row mb-4 d-flex justify-content-around'>
             
-                <div class="col-md-4 d-flex flex-column bg-text mb-3 rounded">
-                    <h2>Full name: {firstName} {lastName}</h2>
-                    <h4>Job title: {jobTitle}</h4>
-                    <h4>Birth Date: {birthDate}</h4>
+                <div class="col-md-4 d-flex flex-column bg-text mb-3 rounded"
+                th:each="employee : ${employees}">
+                    <h2>Full name: <span th:text="${#strings.concat(employee.firstName, ' ', employee.lastName)}"/></h2>
+                    <h4>Job title: <span th:text="${employee.jobTitle}"/></h4>
+                    <h4>Birth Date: <span th:text="${employee.birthDate}"/></h4>
                     <h4><a class="btn-block" href="/">Detail info</a></h4>
                 </div>
-				<div class="col-md-4 d-flex flex-column bg-text mb-3 rounded">
-                    <h2>Full name: {firstName} {lastName}</h2>
-                    <h4>Job title: {jobTitle}</h4>
-                    <h4>Birth Date: {birthDate}</h4>
-                    <h4><a class="btn-block" href="/">Detail info</a></h4>
-                </div>
-				<div class="col-md-4 d-flex flex-column bg-text mb-3 rounded">
-                    <h2>Full name: {firstName} {lastName}</h2>
-                    <h4>Job title: {jobTitle}</h4>
-                    <h4>Birth Date: {birthDate}</h4>
-                    <h4><a class="btn-block" href="/">Detail info</a></h4>
-                </div>
+<!--				<div class="col-md-4 d-flex flex-column bg-text mb-3 rounded">-->
+<!--                    <h2>Full name: {firstName} {lastName}</h2>-->
+<!--                    <h4>Job title: {jobTitle}</h4>-->
+<!--                    <h4>Birth Date: {birthDate}</h4>-->
+<!--                    <h4><a class="btn-block" href="/">Detail info</a></h4>-->
+<!--                </div>-->
+<!--				<div class="col-md-4 d-flex flex-column bg-text mb-3 rounded">-->
+<!--                    <h2>Full name: {firstName} {lastName}</h2>-->
+<!--                    <h4>Job title: {jobTitle}</h4>-->
+<!--                    <h4>Birth Date: {birthDate}</h4>-->
+<!--                    <h4><a class="btn-block" href="/">Detail info</a></h4>-->
+<!--                </div>-->
           
         </div>
     </div>
