--- a/SpringWeb/musicdb/src/main/resources/templates/add-album.html
+++ b/SpringWeb/musicdb/src/main/resources/templates/add-album.html
@@ -15,68 +15,70 @@
 <main class="p-5 bg-blur text-center my-main">
     <h1 class="text-light border-bottom">Add Album</h1>
     <div class="d-flex justify-content-center">
-        <form action="/" method="POST"
+        <form th:action="@{/albums/add}" th:method="POST" th:object="${addAlbumDto}"
               class="text-light">
             <div class="form-row m-5">
                 <div class="col">
                     <label for="name">Album name</label>
-                    <input name="name" id="name" type="text" class="form-control" placeholder="Album name">
-                    <small id="nameError" class="form-text bg-danger rounded">Name must be between 3 and 20
+                    <input th:field="*{name}" th:errorclass="bg-danger" id="name" type="text" class="form-control" placeholder="Album name">
+                    <small th:if="${#fields.hasErrors('name')}"id="nameError" class="form-text bg-danger rounded">Name must be between 3 and 20
                         characters</small>
                 </div>
                 <div class="col">
                     <label for="imgUrl">Image Url</label>
-                    <input name="imgUrl" id="imgUrl" type="text" class="form-control" placeholder="Image Url">
-                    <small id="imageUrlError" class="form-text bg-danger rounded">Image url must be more than 5
+                    <input th:field="*{imgUrl}" th:errorclass="bg-danger" id="imgUrl" type="text" class="form-control" placeholder="Image Url">
+                    <small th:if="${#fields.hasErrors('imgUrl')}"id="imageUrlError" class="form-text bg-danger rounded">Image url must be more than 5
                         characters</small>
                 </div>
             </div>
             <div class="form-row m-5">
                 <div class="col">
                     <label for="price">Price</label>
-                    <input name="price" id="price" type="number" class="form-control" placeholder="Price">
-                    <small id="priceError" class="form-text bg-danger rounded">Price must be positive</small>
+                    <input th:field="*{price}" th:errorclass="bg-danger" id="price" type="number" class="form-control" placeholder="Price">
+                    <small th:if="${#fields.hasErrors('price')}"id="priceError" class="form-text bg-danger rounded">Price must be positive</small>
                 </div>
                 <div class="col">
                     <label for="copies">Copies</label>
-                    <input name="copies" id="copies" type="number" class="form-control" placeholder="Copies">
-                    <small id="copiesError" class="form-text bg-danger rounded">Copies must be positive</small>
+                    <input th:field="*{copies}" th:errorclass="bg-danger" id="copies" type="number" class="form-control" placeholder="Copies">
+                    <small th:if="${#fields.hasErrors('copies')}"id="copiesError" class="form-text bg-danger rounded">Copies must be positive</small>
                 </div>
             </div>
             <div class="form-row m-5">
                 <div class="col">
                     <label for="releaseDate">Release date</label>
-                    <input name="releaseDate" id="releaseDate" type="date" class="form-control" placeholder="Release date">
-                    <small id="releaseDateError" class="form-text bg-danger rounded">Release date cannot be in the
+                    <input th:field="*{releaseDate}" th:errorclass="bg-danger" id="releaseDate" type="date" class="form-control" placeholder="Release date">
+                    <small th:if="${#fields.hasErrors('releaseDate')}"id="releaseDateError" class="form-text bg-danger rounded">Release date cannot be in the
                         future</small>
                 </div>
                 <div class="col">
                     <label for="producer">Producer</label>
-                    <input name="producer" id="producer" type="text" class="form-control" placeholder="Producer">
+                    <input th:field="*{producer}" th:errorclass="bg-danger" id="producer" type="text" class="form-control" placeholder="Producer">
                 </div>
             </div>
             <div class="form-row m-5">
                 <div class="col">
                     <label for="artist">Artist</label>
-                    <select name="artist" id="artist" class="custom-select">
-                        <option value="" selected>Select Artist</option>
+                    <select name="artist" id="artist" class="custom-select" th:errorclass="bg-danger">
+                        <option value="">Select Artist</option>
+                        <option th:each="artist : ${artists}" th:value="${artist.name}" th:text="${artist.name}" th:selected="*{artist} == ${artist.name}">Select Artist</option>
                     </select>
-                    <small id="artistError" class="form-text bg-danger rounded">You must select artist</small>
+                    <small th:if="${#fields.hasErrors('artist')}"id="artistError" class="form-text bg-danger rounded">You must select artist</small>
                 </div>
                 <div class="col">
                     <label for="genre">Genre</label>
-                    <select name="genre" id="genre" class="custom-select">
-                        <option value="" selected>Select genre</option>
+                    <select name="genre" id="genre" class="custom-select" th:errorclass="bg-danger">
+                        <option value="">Select Genre</option>
+                        <option th:each="genre : ${T(bg.softuni.musicdb.models.enums.Genre).values()}" th:value="${genre}" th:text="${genre}" th:selected="*{genre} == ${genre}">Select genre</option>
                     </select>
-                    <small id="genreError" class="form-text bg-danger rounded">You must select genre</small>
+                    <small th:if="${#fields.hasErrors('genre')}"id="genreError" class="form-text bg-danger rounded">You must select genre</small>
                 </div>
             </div>
 
             <div class="form-row m-5">
                 <div class="col">
                     <label for="description">Description</label>
-                    <textarea name="description" id="description" type="text" class="form-control" placeholder="Description"></textarea>
-                    <small id="descriptionError" class="form-text bg-danger rounded">Description length must be more than 5 characters</small>
+                    <textarea th:field="*{description}" th:errorclass="bg-danger" id="description" type="text" class="form-control" placeholder="Description"></textarea>
+                    <small th:if="${#fields.hasErrors('description')}"id="descriptionError" class="form-text bg-danger rounded">Description length must be more than 5 characters</small>
                 </div>
             </div>
             <div class="d-flex justify-content-center mt-4">
