--- a/SpringWeb/musicdb/src/main/resources/templates/home.html
+++ b/SpringWeb/musicdb/src/main/resources/templates/home.html
@@ -14,30 +14,34 @@
 </header>
 <main class="p-5 align-content-center bg-blur my-main">
     <h2 class="text-light border-bottom">Total sold copies
-        of all albums: 10000</h2>
+        of all albums: <span th:text="${totalCopies}"></span></h2>
     <div class="row">
-        <div class="col-md-3">
-            <div class="card mb-4 box-shadow">
-                <img src="/image/metallica.jpg" class="card-img-top" alt="Thumbnail [100%x225]"
+        <div class="col-md-3" th:each="album : ${albums}">
+            <div class="card mb-4 box-shadow" th:object="${album}">
+                <img th:src="*{imgUrl}" class="card-img-top" alt="Thumbnail [100%x225]"
                      data-holder-rendered="true"
                      style="height: 225px; width: 100%; display: block;">
                 <div class="card-body">
                     <div class="text-center">
-                        <p class="card-text border-bottom ">Name: Name of album</p>
-                        <p class="card-text border-bottom ">Artist: Metallica</p>
-                        <p class="card-text border-bottom ">Genre: Metal</p>
-                        <p class="card-text border-bottom ">Price: 19.99</p>
-                        <p class="card-text border-bottom">Release Date: </p>
+                        <p class="card-text border-bottom ">Name: <span th:text="*{name}"></span></p>
+                        <p class="card-text border-bottom ">Artist: <span th:text="*{artist.name}"></span></p>
+                        <p class="card-text border-bottom ">Genre: <span th:text="*{genre}"></span></p>
+                        <p class="card-text border-bottom ">Price: <span th:text="*{price}"></span></p>
+                        <p class="card-text border-bottom">Release Date: <span th:text="*{releaseDate}"></span></p>
                     </div>
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
                             <a type="button" class="btn btn-sm btn-outline-secondary">Delete</a>
                         </div>
-                        <small class="text-muted">1000 copies</small>
+                        <small class="text-muted"><span th:text="*{copies}"></span> copies</small>
                     </div>
                 </div>
             </div>
+
         </div>
+
+    </div>
+
     </div>
 </main>
 <footer class="footer bg-blur">
