--- a/SpringWeb/musicdb/src/main/resources/templates/home.html
+++ b/SpringWeb/musicdb/src/main/resources/templates/home.html
@@ -31,7 +31,7 @@
                     </div>
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
-                            <a type="button" class="btn btn-sm btn-outline-secondary">Delete</a>
+                            <a th:href="@{'/albums/'+*{id}+'/delete'}" type="button" class="btn btn-sm btn-outline-secondary">Delete</a>
                         </div>
                         <small class="text-muted"><span th:text="*{copies}"></span> copies</small>
                     </div>
