spring security and add offer

--- a/SpringWeb/Mobilele/src/main/resources/templates/auth-register.html
+++ b/SpringWeb/Mobilele/src/main/resources/templates/auth-register.html
@@ -20,7 +20,7 @@
 <div class="container">
     <h2 class="text-center text-white">Register User</h2>
     <form th:method="post"
-          th:action="@{/users/register}"
+          th:action="@{/register}"
           th:object="${registerModel}"
           class="main-form mx-auto col-md-8 d-flex flex-column justify-content-center">
         <div class="form-group">
