--- a/SpringWeb/Mobilele/src/main/resources/templates/fragments/navbar.html
+++ b/SpringWeb/Mobilele/src/main/resources/templates/fragments/navbar.html
@@ -8,7 +8,7 @@
 <body>
 <div>
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top">
-        <a class="navbar-brand" href="/"><img alt="car picture" src="/img/car.png" class="logo"></a>
+        <a class="navbar-brand" href="/"><img alt="car picture" src="/images/car.png" class="logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -20,7 +20,7 @@
                 >
                     <a class="nav-link" href="/brands/all">All Brands</a>
                 </li>
-                <li class="nav-item" th:if="${@currentUser.isLogged()}">
+                <li class="nav-item" sec:authorize="isAuthenticated()">
                     <a class="nav-link" href="/offers/add" >Add Offer</a>
                 </li>
                 <li class="nav-item">
@@ -38,20 +38,21 @@
                         <a class="dropdown-item" href="/">Something else here</a>
                     </div>
                 </li>
-                <li class="nav-item" th:if="${@currentUser.isLogged()}">
+                <li class="nav-item" sec:authorize="isAuthenticated()">
                     <div class="form-inline my-2 my-lg-0 border px-3">
                         <div class="logged-user"
                              text="Welcome, Gosho">
                         </div>
-                        <a class="nav-link" th:href="@{/users/logout}">Logout</a>
+                        <form th:action="@{/logout}" th:method="post"><input class="btn btn-link nav-link" type="submit" value="Logout"></form>
+
                     </div>
                 </li>
 
-                <li class="nav-item" th:if="${!@currentUser.isLogged()}">
-                    <a class="nav-link" th:href="@{/users/register}">Register</a>
+                <li class="nav-item" sec:authorize="!isAuthenticated()">
+                    <a class="nav-link" th:href="@{/register}">Register</a>
                 </li>
-                <li class="nav-item" th:if="${!@currentUser.isLogged()}">
-                    <a class="nav-link" th:href="@{/users/login}">Login</a>
+                <li class="nav-item" sec:authorize="!isAuthenticated()">
+                    <a class="nav-link" th:href="@{/login}">Login</a>
                 </li>
 
             </ul>
