--- a/SpringWeb/Mobilele/src/main/resources/templates/index.html
+++ b/SpringWeb/Mobilele/src/main/resources/templates/index.html
@@ -18,7 +18,15 @@
 
 
 <div class="container-fluid">
-    <h5 class="text-center text-white mt-5">Welcome to MobiLeLeLe <span th:if="${@currentUser.isLogged()}" th:text="${@currentUser.getName()}"></span></h5>
+    <h5 class="text-center text-white mt-5">Welcome to MobiLeLeLe
+        <span
+            sec:authorize="isAuthenticated()"
+            th:text="${#authentication.principal.username}">
+        </span>
+
+        <span sec:authorize="!isAuthenticated()">
+            Anonymous
+        </span></h5>
 </div>
 
 <div>
