--- a/SpringWeb/Mobilele/src/main/resources/templates/offer-add.html
+++ b/SpringWeb/Mobilele/src/main/resources/templates/offer-add.html
@@ -27,24 +27,26 @@
 
             <div class="form-group col-md-6 mb-3">
                 <label class="text-center text-white font-weight-bold" for="model">Model</label>
-                <select id="model" class="form-control" th:field="*{model}">
+                <select id="model" class="form-control" th:field="*{model}" th:errorclass="is-invalid">
                     <option value="">- Select a model -</option>
-                    <optgroup th:each="brand : ${brandList}" th:label="${brand.name}" >
+                    <optgroup th:each="brand : ${brandList}" th:label="${brand.name}">
                         <option th:each="model : ${brand.models}"
                                 th:text="${model.name}"
                                 th:value="${model.name}"
                                 th:selected="*{model} == ${model}">Model</option>
                     </optgroup>
                 </select>
-                <p class="errors alert alert-danger">
+                <p class="invalid-feedback errors alert alert-danger">
                     Vechicle model is required.
                 </p>
             </div>
             <div class="form-group col-md-6 mb-3">
                 <label for="price" class="text-white font-weight-bold">Price</label>
                 <input id="price" type="number" min="0" step="100" class="form-control"
+                       th:field="*{price}"
+                       th:errorclass="is-invalid"
                        placeholder="Suggested price"/>
-                <p class="errors alert alert-danger">
+                <p class="invalid-feedback errors alert alert-danger">
                     Suggested price is required.
                 </p>
             </div>
@@ -68,7 +70,7 @@
             </div>
             <div class="form-group col-md-6 mb-3">
                 <label class="text-center text-white font-weight-bold" for="transmission">Transmission</label>
-                <select id="transmission" class="form-control" th:field="*{transmission}" th:errorclass="${is-invalid}">
+                <select id="transmission" class="form-control" th:field="*{transmission}" th:errorclass="is-invalid">
                     <option value="">- Select transmission type -</option>
                     <option th:each="transmission : ${T(bg.softuni.mobilele.models.enums.Transmission).values()}"
                             th:value="${transmission}"
@@ -88,17 +90,21 @@
             <div class="form-group col-md-6 mb-3">
                 <label for="year" class="text-white font-weight-bold">Year</label>
                 <input id="year" type="number" min="1900" max="2099" step="1" class="form-control"
+                       th:field="*{year}"
+                       th:errorclass="is-invalid"
                        placeholder="Manufacturing year"/>
-                <p class="errors alert alert-danger">
+                <p class="invalid-feedback errors alert alert-danger">
                     Manufacturing year is required.
                 </p>
             </div>
             <div class="form-group col-md-6 mb-3">
                 <label for="mileage" class="text-white font-weight-bold">Mileage</label>
                 <input id="mileage" type="number" min="0" max="900000" step="1000"
+                       th:field="*{mileage}"
+                       th:errorclass="is-invalid"
                        class="form-control"
                        placeholder="Mileage in kilometers"/>
-                <p class="errors alert alert-danger">
+                <p class="invalid-feedback errors alert alert-danger">
                     Mileage in kilometers is required.
                 </p>
             </div>
@@ -106,17 +112,19 @@
 
         <div class="form-group">
             <label class="text-white font-weight-bold" for="description">Description</label>
-            <textarea id="description" th:field="*{description}" th:text="*{description}" type="textarea" class="form-control" rows="3"
+            <textarea id="description" th:field="*{description}" th:errorclass="is-invalid" type="textarea" class="form-control" rows="3"
                       placeholder="Description"></textarea>
-            <p class="errors alert alert-danger">
+            <p class="invalid-feedback errors alert alert-danger">
                 Description is required.
             </p>
         </div>
         <div class="form-group">
             <label class="text-white font-weight-bold" for="imageUrl">Image URL</label>
             <input id="imageUrl" type="url" class="form-control"
+                   th:field="*{imageUrl}"
+                   th:errorclass="is-invalid"
                    placeholder="Put vehicle image URL here">
-            <p class="errors alert alert-danger">
+            <p class="invalid-feedback errors alert alert-danger">
                 Vehicle image URL is required.
             </p>
         </div>
