--- a/SpringWeb/pathfinder/src/main/resources/templates/profile.html
+++ b/SpringWeb/pathfinder/src/main/resources/templates/profile.html
@@ -13,14 +13,14 @@
             <div class="col-md-7">
                 <div class="profile-card p-3 py-4">
                     <div class="text-center"><img src="/images/profile.jpg" width="100" class="rounded-circle"></div>
-                    <div class="text-center mt-3" th:object="${@currentUser.getUser()}">
+                    <div class="text-center mt-3">
                         <span class="bg-secondary p-1 px-4 rounded text-white" th:text="*{level}">Pro</span>
                         <h5 class="mt-4 mb-0">Full name</h5>
-                        <span th:text="*{fullName}">Full Name</span>
+                        <span >Full Name</span>
                         <h5 class="mt-2 mb-0">Username</h5>
-                        <span th:text="*{username}">UI/UX Designer</span>
+                        <span >UI/UX Designer</span>
                         <h5 class="mt-2 mb-0">Age</h5>
-                        <span th:text="*{age}">33</span>
+                        <span >33</span>
                         <div class="px-4 mt-5">
                             <p class="fonts">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim et nostrum
                                 optio perferendis quam quod ratione rem sit soluta ut! A dolor laborum, maiores neque
