--- a/SpringWeb/Mobilele/src/main/resources/templates/brands.html
+++ b/SpringWeb/Mobilele/src/main/resources/templates/brands.html
@@ -18,10 +18,11 @@
 
 <div class="container">
     <h2 class="text-center text-white m-3">All Brands</h2>
-    <div class='row mb-4 d-flex justify-content-around'>
+
+    <div class='row mb-4 d-flex justify-content-around' th:each="brand : ${brands}">
         <div  class="brand-section col-md-5 mr-auto d-flex flex-column">
             <h2>Car brand:
-                <span >Brand name</span>
+                <span th:text="${brand.name}">Brand name</span>
             </h2>
             <div>Models:
                 <table>
@@ -33,18 +34,19 @@
                         <th>End Year</th>
                         <th>Picture</th>
                     </tr>
-                    <tr>
+                    <tr th:each="model : ${brand.models}">
                         <th>No</th>
-                        <th >Model Name</th>
-                        <th >Model Category</th>
-                        <th >Model Start Year</th>
-                        <th >Model End Year</th>
-                        <th><img alt="image" src="/"
+                        <th th:text="${model.name}">Model Name</th>
+                        <th th:text="${model.category != null ? model.category.name : ''}">Model Category</th>
+                        <th th:text="${model.startYear}">Model Start Year</th>
+                        <th th:text="${model.endYear}">Model End Year</th>
+                        <th><img alt="image" th:src="${model.imageUrl}"
                                  class="img-thumbnail rounded"></th>
                     </tr>
                 </table>
             </div>
         </div>
+
     </div>
 
     <div>
