--- a/SpringWeb/Mobilele/src/main/resources/templates/fragments/navbar.html
+++ b/SpringWeb/Mobilele/src/main/resources/templates/fragments/navbar.html
@@ -26,7 +26,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/offers/all">All Offers</a>
                 </li>
-                <li class="nav-item dropdown">
+                <li class="nav-item dropdown" sec:authorize="hasRole('ROLE_ADMIN')">
                     <a class="nav-link dropdown-toggle" href="/" id="navbarDropdown" role="button"
                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Admin
