--- a/SpringWeb/Mobilele/src/main/resources/templates/brands.html
+++ b/SpringWeb/Mobilele/src/main/resources/templates/brands.html
@@ -19,8 +19,9 @@
 <div class="container">
     <h2 class="text-center text-white m-3">All Brands</h2>
 
-    <div class='row mb-4 d-flex justify-content-around' th:each="brand : ${brands}">
-        <div  class="brand-section col-md-5 mr-auto d-flex flex-column">
+    <div class='row mb-4 d-flex justify-content-around' >
+        <div  class="brand-section col-md-5 mr-auto d-flex flex-column"
+              th:each="brand : ${brands}">
             <h2>Car brand:
                 <span th:text="${brand.name}">Brand name</span>
             </h2>
