--- a/SpringWeb/Mobilele/src/main/resources/templates/offers.html
+++ b/SpringWeb/Mobilele/src/main/resources/templates/offers.html
@@ -20,26 +20,27 @@ xmlns:th="">
     <div class="container-fluid">
         <h2 class="text-center text-white mt-5">All Offers</h2>
         <div class="offers row mx-auto d-flex flex-row justify-content-center">
-            <div class="offer card col-sm-6 col-md-3  col-lg-2 m-1 p-0">
+            <div class="offer card col-sm-6 col-md-3  col-lg-2 m-1 p-0" th:each="offer : ${offers}">
                 <div class="card-img-top-wrapper">
-                    <img class="card-img-top" src="/" alt="Car image">
+                    <img class="card-img-top" th:src="${offer.imageUrl}" alt="Car image">
                 </div>
                 <div class="card-body pb-1">
-                    <h5 class="card-title">
+                    <h5 class="card-title" th:text="${offer.toString()}">
 					Offer year Brand name Model name</h5>
                 </div>
                 <ul class="offer-details list-group list-group-flush">
                     <li class="list-group-item">
-                        <div class="card-text"><span>• Mileage</span></div>
-                        <div class="card-text"><span>• Price</span></div>
-                        <div class="card-text"><span>• Engine type</span></div>
-                        <div class="card-text"><span>• Transmission type</span></div>
+                        <div class="card-text"><span>• Mileage: </span><span th:text="${offer.mileage}"></span></div>
+                        <div class="card-text"><span>• Price: </span><span th:text="${offer.price}"></span></div>
+                        <div class="card-text"><span>• Engine type: </span><span th:text="${offer.engine}"></span></div>
+                        <div class="card-text"><span>• Transmission type: </span><span th:text="${offer.transmission}"></span></div>
                     </li>
                 </ul>
                 <div class="card-body">
-                    <a class="card-link" href="/">Details</a>
+                    <a class="card-link" th:href="@{/offers/{id}(id=${offer.id})}">Details</a>
                 </div>
             </div>
+
         </div>
     </div>
 
