started work on update offer

--- a/SpringWeb/Mobilele/src/main/resources/templates/details.html
+++ b/SpringWeb/Mobilele/src/main/resources/templates/details.html
@@ -36,7 +36,7 @@
                 </li>
             </ul>
             <div class="card-body">
-                <a class="card-link" href="/">Update</a>
+                <a class="card-link" th:href="@{/offers/{id}/update(id = *{id})}">Update</a>
                 <a class="card-link" href="/">Delete</a>
             </div>
         </div>
