updating offer is now possible only by owner of offer and admins

--- a/SpringWeb/Mobilele/src/main/resources/templates/details.html
+++ b/SpringWeb/Mobilele/src/main/resources/templates/details.html
@@ -35,7 +35,7 @@
                     <div class="card-text"><span>• Seller - <span th:text="*{seller}"></span></span></div>
                 </li>
             </ul>
-            <div class="card-body">
+            <div class="card-body" th:if="${isOwner}">
                 <a class="card-link" th:href="@{/offers/{id}/update(id = *{id})}">Update</a>
                 <a class="card-link" href="/">Delete</a>
             </div>
