--- a/SpringWeb/Mobilele/src/main/resources/templates/details.html
+++ b/SpringWeb/Mobilele/src/main/resources/templates/details.html
@@ -37,7 +37,13 @@
             </ul>
             <div class="card-body" th:if="${isOwner}">
                 <a class="card-link" th:href="@{/offers/{id}/update(id = *{id})}">Update</a>
-                <a class="card-link" href="/">Delete</a>
+<!--                <a type="submit" class="card-link" href="/">Delete</a>-->
+                <form
+                        th:action="@{/offers/{id}(id=*{id})}"
+                        th:method="delete"
+                >
+                    <input type="submit" value="Delete">
+                </form>
             </div>
         </div>
         <div class="offer card col-sm-2 col-md-3  col-lg-4 m-1 p-0">
