--- a/SpringWeb/Mobilele/src/main/resources/templates/search.html
+++ b/SpringWeb/Mobilele/src/main/resources/templates/search.html
@@ -46,18 +46,18 @@
     <nav class="d-flex justify-content-center my-3" aria-label="Page navigation example">
         <ul class="pagination">
             <li class="page-item">
-                <a class="page-link" href="#" aria-label="Previous">
+                <a class="page-link" th:href="@{/offers/all(size=${offers.getSize()},page=0)}" aria-label="Previous">
                     <span aria-hidden="true">&laquo;</span>
-                    <span class="sr-only">Previous</span>
+                    <span class="sr-only">First</span>
                 </a>
             </li>
             <li class="page-item"><a class="page-link" href="#">1</a></li>
             <li class="page-item"><a class="page-link" href="#">2</a></li>
             <li class="page-item"><a class="page-link" href="#">3</a></li>
             <li class="page-item">
-                <a class="page-link" href="#" aria-label="Next">
+                <a class="page-link" th:href="@{/offers/all(size=${offers.getSize()},page=${offers.getTotalPages() - 1})}" aria-label="Next">
                     <span aria-hidden="true">&raquo;</span>
-                    <span class="sr-only">Next</span>
+                    <span class="sr-only">Last</span>
                 </a>
             </li>
         </ul>
