html search fields

--- a/SpringWeb/Mobilele/src/main/resources/templates/offers.html
+++ b/SpringWeb/Mobilele/src/main/resources/templates/offers.html
@@ -18,7 +18,25 @@ xmlns:th="">
 
 
     <div class="container-fluid">
-        <h2 class="text-center text-white mt-5">All Offers</h2>
+<!--        <nav class="navbar navbar-light bg-light d-flex justify-content-center">-->
+            <form class="form-inline" th:method="get" th:action="@{/offers/all}">
+                <div class="form-group col-md-6 mb-3">
+                    <select id="model" th:name="model"  class="form-control">
+                        <option value="">- Select a model -</option>
+                        <optgroup th:each="brand : ${brandList}" th:label="${brand.name}">
+                            <option th:each="model : ${brand.models}"
+                                    th:text="${model.name}"
+                                    th:value="${model.name}"
+                                    th:selected="*{model} == ${model}">Model</option>
+                        </optgroup>
+                    </select>
+                </div>
+                <input class="form-control mr-sm-2" type="search" th:name="minPrice" placeholder="Minimal Price" aria-label="Minimal Price">
+                <input class="form-control mr-sm-2" type="search" th:name="maxPrice" placeholder="Maximum Price" aria-label="Maximum Price">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+<!--        </nav>-->
+<!--        <h2 class="text-center text-white mt-5">All Offers</h2>-->
         <div class="offers row mx-auto d-flex flex-row justify-content-center">
             <div class="offer card col-sm-6 col-md-3  col-lg-2 m-1 p-0" th:each="offer : ${offers}">
                 <div class="card-img-top-wrapper">
@@ -42,7 +60,7 @@ xmlns:th="">
             </div>
 
         </div>
-        <nav class="d-flex justify-content-center my-3" aria-label="Page navigation example">
+        <nav class="my-3 d-flex justify-content-center" aria-label="Page navigation example">
             <ul class="pagination">
                 <li class="page-item">
                     <a class="page-link" th:href="@{/offers/all(size=${offers.getSize()},page=0)}" aria-label="Previous">
